tao fragment Search

--- a/app/src/main/res/layout/fragment_library_.xml
+++ b/app/src/main/res/layout/fragment_library_.xml
@@ -1,215 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#B8EC7B">
-<LinearLayout
-    android:id="@+id/thuvien"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="20dp"
-            android:text="Thư viện"
-            android:textSize="26sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-
-            android:id="@+id/search"
-            android:layout_width="82dp"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:contentDescription="timkiem"
-            android:src="@drawable/search"
-            android:padding="20dp"/>
-
-
-    </LinearLayout>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/playlist"
-                android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_button"
-                android:drawableTop="@drawable/heart"
-                android:gravity="center"
-                android:text="@string/bai_hat_yeu_thich"
-                android:textColor="#000000"
-                app:backgroundTint="@null" />
-
-            <Button
-                android:id="@+id/download"
-                android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_button"
-                android:drawableTop="@drawable/download"
-                android:text="@string/tai_xuong"
-                android:textColor="#000000"
-                app:backgroundTint="@null" />
-
-            <Button
-                android:id="@+id/nghesi"
-                android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_button"
-                android:drawableTop="@drawable/artist"
-                android:text="@string/nghe_si"
-                android:textColor="#000000"
-                app:backgroundTint="@null" />
-
-            <Button
-                android:id="@+id/mv"
-                android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_button"
-                android:text="@string/mv"
-                android:textColor="#000000"
-                app:backgroundTint="@null" />
-
-            <Button
-                android:id="@+id/upload"
-                android:layout_width="130dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_button"
-                app:backgroundTint="@null"
-                android:textColor="#000000"
-                android:text="@string/upload" />
-
-        </LinearLayout>
-    </HorizontalScrollView>
-
-    <LinearLayout
+        android:id="@+id/thuvien"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView6"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Nghe gần đây >"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
-        <ImageButton
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="20dp"
+                android:text="Thư viện"
+                android:textSize="26sp"
+                android:textStyle="bold" />
 
-            android:id="@+id/ganday"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:contentDescription="@string/gan_day"
-            android:layout_marginTop="-15dp"
-            android:layout_marginStart="20dp"
-            android:text="@string/gan_day"
-            android:background="@drawable/custom_recently"
-            android:src="@drawable/recent" />
-    </LinearLayout>
+            <ImageButton
+
+                android:id="@+id/search"
+                android:layout_width="82dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:contentDescription="timkiem"
+                android:padding="20dp"
+                android:src="@drawable/search"
+               />
 
 
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_playlist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="@string/playlist"
-            android:textColor="@color/black"
-            android:background="@android:color/transparent"/>
-
-        <Button
-            android:id="@+id/btn_Album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:textColor="@color/black"
-            android:text="@string/album"
-            android:background="@android:color/transparent"/>
-
-        <RelativeLayout
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/bacham"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="..."
-                android:textSize="30sp"
-                android:background="@android:color/transparent"
-                android:layout_alignParentEnd="true"/>
-        </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/playlist"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:drawableTop="@drawable/heart"
+                    android:gravity="center"
+                    android:text="@string/bai_hat_yeu_thich"
+                    android:textColor="#000000"
+                    app:backgroundTint="@null" />
 
-        <ImageButton
-            android:id="@+id/add_playlist"
-            android:layout_width="77dp"
-            android:layout_height="75dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/custom_button"
-            android:contentDescription="addplaylist"
-            android:src="@drawable/plus"
-            app:backgroundTint="@null">
+                <Button
+                    android:id="@+id/download"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:drawableTop="@drawable/download"
+                    android:text="@string/tai_xuong"
+                    android:textColor="#000000"
+                    app:backgroundTint="@null" />
 
-        </ImageButton>
-        <TextView
-            android:layout_width="200dp"
+                <Button
+                    android:id="@+id/nghesi"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:drawableTop="@drawable/artist"
+                    android:text="@string/nghe_si"
+                    android:textColor="#000000"
+                    app:backgroundTint="@null" />
+
+                <Button
+                    android:id="@+id/mv"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:text="@string/mv"
+                    android:textColor="#000000"
+                    app:backgroundTint="@null" />
+
+                <Button
+                    android:id="@+id/upload"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:text="@string/upload"
+                    android:textColor="#000000"
+                    app:backgroundTint="@null" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tao_playlist"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            >
+            android:orientation="vertical">
 
-        </TextView>
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="Nghe gần đây >"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageButton
+
+                android:id="@+id/ganday"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="-15dp"
+                android:background="@drawable/custom_recently"
+                android:contentDescription="@string/gan_day"
+                android:src="@drawable/recent"
+                android:text="@string/gan_day" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_playlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:text="@string/playlist"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/btn_Album"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:text="@string/album"
+                android:textColor="@color/black" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/bacham"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:background="@android:color/transparent"
+                    android:text="..."
+                    android:textColor="@color/black"
+                    android:textSize="30sp" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+            <ImageButton
+                android:id="@+id/add_playlist"
+                android:layout_width="77dp"
+                android:layout_height="75dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/custom_button"
+                android:contentDescription="addplaylist"
+                android:src="@drawable/plus"
+                app:backgroundTint="@null">
+
+            </ImageButton>
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/tao_playlist"
+                android:textSize="16sp"
+                android:textStyle="bold">
+
+            </TextView>
+        </LinearLayout>
+
     </LinearLayout>
-
-</LinearLayout>
 </ScrollView>
 
