--- a/app/src/main/res/layout/fragment_zingchat_.xml
+++ b/app/src/main/res/layout/fragment_zingchat_.xml
@@ -6,10 +6,33 @@
     android:background="#00BCD4"
     tools:context=".Library_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="zingchat" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="20dp"
+            android:text="Bảng xếp hạng"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
+        <ImageButton
+
+            android:id="@+id/search"
+            android:layout_width="82dp"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:contentDescription="timkiem"
+            android:padding="20dp"
+            android:src="@drawable/search"
+            />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
