--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -13,7 +13,7 @@
         android:text="user" />
 
     <Button
-        android:id="@+id/nofication"
+        android:id="@+id/notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="thông báo" />
