--- a/app/src/main/res/layout/fragment_explore_.xml
+++ b/app/src/main/res/layout/fragment_explore_.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E91E63"
-    tools:context=".Library_Fragment">
+    tools:context=".View.Library_Fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
