--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4CAF50"
-    tools:context=".Library_Fragment">
+    tools:context=".View.Library_Fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,15 +21,13 @@
             android:textSize="26sp"
             android:textStyle="bold" />
         <ImageButton
-
             android:id="@+id/notification"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            android:src="@drawable/bell_regular"
-            />
-        <ImageButton
+            android:src="@drawable/bell_regular"/>
 
+        <ImageButton
             android:id="@+id/search"
             android:layout_width="82dp"
             android:layout_height="match_parent"
