--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4CAF50"
-    tools:context=".View.Library_Fragment">
+    android:background="#D8E4DF"
+    android:orientation="vertical"
+    tools:context=".Library_Fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,17 +30,64 @@
             android:src="@drawable/bell_regular"/>
 
         <ImageButton
+
             android:id="@+id/search"
             android:layout_width="82dp"
             android:layout_height="match_parent"
             android:background="@null"
             android:contentDescription="timkiem"
+            android:onClick="onSearchButtonClick"
             android:padding="20dp"
             android:src="@drawable/search"
-            tools:ignore="DuplicateIds"
-            android:onClick="onSearchButtonClick"/>
+            tools:ignore="DuplicateIds" />
 
 
     </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+
+            android:id="@+id/ganday"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/custom_user"
+            android:contentDescription="@string/gan_day"
+            android:src="@drawable/user1" />
+
+        <Button
+            android:id="@+id/dangnhap"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_button"
+            android:text="Đăng nhập"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:backgroundTint="@null" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:text="Nâng cấp tài khoản >"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_paper_slide"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="10dp">
+
+    </androidx.viewpager2.widget.ViewPager2>
+
+</LinearLayout>
