--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -54,42 +54,11 @@
         </FrameLayout>
     </RelativeLayout>
 
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_musics"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp"
-        >
+        android:layout_height="wrap_content"/>
 
-        <ImageView
-            android:id="@+id/img_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_marginStart="20dp">
-
-            <TextView
-                android:id="@+id/tv_nameMusic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textStyle="bold"
-                android:gravity="center_vertical"/>
-
-            <TextView
-                android:id="@+id/tv_nameCasi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"/>
-        </LinearLayout>
-    </LinearLayout>
 
 
 </LinearLayout>
