--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,30 +3,34 @@
     android:id="@+id/play"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="14dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="14dp">
+
     <ImageView
         android:id="@+id/img_music"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_name"
-            android:textSize="14sp"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/tv_artist"
-            android:textSize="14sp"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:layout_height="wrap_content"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
