--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,207 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#EDF3ED"
-    tools:context=".Library_Fragment">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:orientation="horizontal">
 
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/imagebntback"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:background="#F6F2F2"
+            app:srcCompat="@drawable/ic_back1" />
 
-    <ImageButton
-        android:id="@+id/imagebntback"
-        android:layout_width="54dp"
-        android:layout_height="44dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="334dp"
-        android:background="#F6F2F2"
-        app:srcCompat="@drawable/ic_back1" />
-
-    <ImageButton
-        android:id="@+id/imagebntmore"
-        android:layout_width="wrap_content"
-        android:layout_height="53dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="655dp"
-        android:backgroundTint="#F8F5F5"
-        app:srcCompat="@drawable/ic_more" />
-
+        <ImageButton
+            android:id="@+id/imagebntmore"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="300dp"
+            android:backgroundTint="#F8F5F5"
+            app:srcCompat="@drawable/ic_more" />
+            </LinearLayout>
     <ImageView
-        android:id="@+id/imagebaihat"
-        android:layout_width="173dp"
-        android:layout_height="170dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="507dp"
-        tools:srcCompat="@tools:sample/avatars" />
+            android:id="@+id/imagebaihat"
+            android:layout_width="173dp"
+            android:layout_height="173dp"
+            android:layout_gravity="center"
+            tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textplaylist"
-        android:layout_width="86dp"
-        android:layout_height="29dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="172dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginBottom="453dp"
-        android:text="Tên Playlist" />
+            android:id="@+id/textplaylist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-black"
+            android:text="Tên Playlist" />
 
     <TextView
-        android:id="@+id/textuser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="187dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginBottom="427dp"
-        android:text="Tên user" />
+            android:id="@+id/textuser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Tên user" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textsobaihat"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="129dp"
-        android:layout_marginEnd="194dp"
-        android:layout_marginBottom="401dp"
-        android:text="Số Bài Hát" />
+        <TextView
+            android:id="@+id/textsobaihat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="149dp"
+            android:text="Số Bài Hát" />
 
-    <TextView
-        android:id="@+id/textsophut"
-        android:layout_width="62dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="236dp"
-        android:layout_marginEnd="113dp"
-        android:layout_marginBottom="399dp"
-        android:text="Số phút" />
+        <ImageView
+            android:id="@+id/imagebaihat"
+            android:layout_width="4dp"
+            android:layout_height="4dp"
+            android:layout_marginTop="8dp"
+            app:srcCompat="@drawable/ic_dots" />
 
-    <ImageButton
-        android:id="@+id/imagebntdown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="344dp"
-        android:backgroundTint="#F3F1F1"
-        android:src="@drawable/ic_download"
-        android:tint="#302F2F" />
 
-    <TextView
-        android:id="@+id/texttaixuong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginBottom="324dp"
-        android:text="Tải xuống" />
+        <TextView
+            android:id="@+id/textsophut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/textthembai"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="333dp"
-        android:layout_marginBottom="322dp"
-        android:text="Thêm bài" />
-
-    <Button
-        android:id="@+id/bntphatngaunhien"
-        android:layout_width="210dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="96dp"
-        android:layout_marginBottom="323dp"
-        android:text="Phát Ngẫu Nhiên" />
-
-    <ImageButton
-        android:id="@+id/imagebntplus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="341dp"
-        android:backgroundTint="#F4F1F1"
-        android:src="@drawable/ic_plus" />
-
-    <ListView
+            android:text="Số phút" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="126dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="186dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/imagebntdown"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="55dp"
+                android:backgroundTint="#F3F1F1"
+                android:src="@drawable/ic_download"
+                android:tint="#302F2F" />
+            <TextView
+                android:id="@+id/texttaixuong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:textSize="12dp"
+                android:text="Tải xuống" />
+        </LinearLayout>
+        <Button
+            android:id="@+id/bntphatngaunhien"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Phát Ngẫu Nhiên" />
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/imagebntplus"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="55dp"
+                android:backgroundTint="#F4F1F1"
+                android:src="@drawable/ic_plus" />
+            <TextView
+                android:id="@+id/textthembai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="38dp"
+                android:textSize="12dp"
 
-    <TextView
-        android:id="@+id/textbaihatgoiy"
-        android:layout_width="108dp"
-        android:layout_height="31dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="287dp"
-        android:layout_marginBottom="155dp"
-        android:text="Bài hát gợi ý"
-        android:textSize="18dp" />
+                android:text="Thêm bài" />
+        </LinearLayout>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textbaihatthinhhanh"
-        android:layout_width="295dp"
-        android:layout_height="20dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="138dp"
-        android:text="Những bài hát thịnh hành trên zing mp3" />
-
-    <ListView
-        android:id="@+id/listviewsuggestedsong"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewplaylist"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp" />
-
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textbathaigoiy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:textSize="16dp"
+            android:text="Bài hát gợi ý" />
+        <TextView
+            android:id="@+id/textbaihatthinhhanh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:textSize="12dp"
+            android:text="Bài hát thịnh hành trên Zing MP3" />
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewbaihatthinhhanh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"/>
     <Button
         android:layout_below="@+id/listviewsuggestedsong"
         android:id="@+id/button"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="261dp"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:textSize="8dp"
         android:text="Thêm bài" />
-
-
-</RelativeLayout>
+</LinearLayout>
