--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,7 +8,16 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
+    android:background="@color/color_app"
     tools:context=".View.SignInActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Đăng nhập"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textColor="#B236C8"/>
     
     <EditText
         android:layout_width="match_parent"
@@ -33,6 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="@drawable/custom_btn_login"
+        app:backgroundTint="@null"
         android:text="Đăng nhập"/>
 
     <LinearLayout
