--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,16 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
+    android:background="@color/color_app"
     tools:context=".View.SignUpActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Đăng ký"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textColor="#B236C8"/>
 
     <EditText
         android:id="@+id/edt_email"
@@ -16,6 +25,7 @@
         android:layout_height="wrap_content"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:layout_marginTop="10dp"
         android:imeOptions="actionNext"
         android:maxLength="100"
         android:textColor="@color/black"/>
@@ -24,7 +34,18 @@
         android:id="@+id/edt_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Passwword"
+        android:hint="Mật khẩu"
+        android:inputType="textPassword"
+        android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
+        android:maxLength="100"
+        android:textColor="@color/black"/>
+
+    <EditText
+        android:id="@+id/edt_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nhập lại mật khẩu"
         android:inputType="textPassword"
         android:layout_marginTop="10dp"
         android:imeOptions="actionDone"
@@ -36,6 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="@drawable/custom_btn_login"
+        app:backgroundTint="@null"
         android:text="Đăng ký"/>
 
 </LinearLayout>
