--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
+    android:background="@color/color_app"
     tools:context=".View.SplashActivity">
 
     <ImageView
@@ -18,8 +19,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="Music App"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/color_button"/>
 </LinearLayout>
