--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#191818</color>
+    <color name="color_app">#CF87DC</color>
+    <color name="color_button">#B236C8</color>
 </resources>
