--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -59,13 +59,13 @@
              />
 
         <Button
-            android:id="@+id/dangnhap"
+            android:id="@+id/btn_sign_out"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/custom_button"
-            android:text="Đăng nhập"
+            android:text="Đăng xuất"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:backgroundTint="@null" />
